--- a/src/betal_kreditkort.html
+++ b/src/betal_kreditkort.html
@@ -591,7 +591,7 @@
                 tabindex="0"
                 class="mx-auto grid w-full justify-center rounded-radius-mobile border-0 bg-color-primary-button-background py-xxs-spacing-mobile px-l-spacing-mobile font-button-text text-button-mobile text-color-white drop-shadow-buttonshadow hover:bg-color-primary-button-hover-background lg:w-full lg:py-xs-spacing-mobile"
                 href="betal_bekraeft.html"
-                >Bekræft køb</a
+                >Bekræft mit køb</a
               >
             </div>
           </div>
